[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Ponkrashov <mrpanek@yandex.by>"]
description = ""
name = "stories"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
telebot = "^0.0.3"
peewee = "^3.13"
[tool.poetry.dev-dependencies]
